before section admin

--- a/Views/Test/test1.cshtml
+++ b/Views/Test/test1.cshtml
@@ -1,7 +1,8 @@
 ﻿
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "test1";
     Layout = "~/Views/Shared/_DefualtLayout.cshtml";
 }
 
-@Html.Action("Slider")
+<h2>test1</h2>
+
