--- a/Views/Test/test2.cshtml
+++ b/Views/Test/test2.cshtml
@@ -1,7 +1,8 @@
 ﻿
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "test2";
     Layout = "~/Views/Shared/_DefualtLayout.cshtml";
 }
 
-@Html.Action("Slider")
+<h2>test2</h2>
+
