--- a/Views/Product/ShowProduct.cshtml
+++ b/Views/Product/ShowProduct.cshtml
@@ -203,7 +203,7 @@
 
                     </div>
                     <div id="tab-3" class="tab-panel" dir="rtl">
-                        @*<div id="reviews">
+                        <div id="reviews">
 
                             <div id="listComment">
                                 @Html.Action("ShowComments")
@@ -214,7 +214,7 @@
                             </div>
 
 
-                        </div>*@
+                        </div>
                     </div>
                 </div>
             </div>
