--- a/Views/Shared/_Product.cshtml
+++ b/Views/Shared/_Product.cshtml
@@ -26,7 +26,7 @@
             <div class="product-button">
                 <a class="btn-add-wishlist" title="افزودن به لیست دلخواه" href="#">افزودن لیست دلخواه </a>
                 <a class="btn-add-comparre" title="افزودن برای مقایسه" href="#">افزودن مقایسه مقایسه </a>
-                <a class="button-radius btn-add-cart" title="افزودن به سبد خرید" href="#">خرید<span class="icon"></span></a>
+                <a class="button-radius btn-add-cart" title="افزودن به سبد خرید" onclick="AddToCart(@Model.ProductID)">خرید<span class="icon"></span></a>
             </div>
         </div>
     </div>
