--- a/Areas/Admin/Views/Sliders/Delete.cshtml
+++ b/Areas/Admin/Views/Sliders/Delete.cshtml
@@ -1,16 +1,16 @@
 ﻿@model DataLayer.Slider
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "خذف اسلایدر";
     Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+
+
 <div>
-    <h4>Slider</h4>
-    <hr />
+    <h4>آیا از حذف اسلایدر مطمئن هستید؟</h4>
+    <hr style="border-top:solid 1px red"/>
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.Title)
@@ -20,20 +20,14 @@
             @Html.DisplayFor(model => model.Title)
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.ImageName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ImageName)
-        </dd>
+      
 
         <dt>
             @Html.DisplayNameFor(model => model.StartDate)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.StartDate)
+            @Model.StartDate.ToShamsi()
         </dd>
 
         <dt>
@@ -41,7 +35,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.EndDate)
+            @Model.EndDate.ToShamsi()
         </dd>
 
         <dt>
@@ -58,8 +52,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="حذف اسلایدر" class="btn btn-success" /> |
+            @Html.ActionLink("بازگشت به لیست", "Index")
         </div>
     }
 </div>
