--- a/Views/Home/Slider.cshtml
+++ b/Views/Home/Slider.cshtml
@@ -40,7 +40,7 @@
 
                             </div>
                             <div id="tab-guarantee" class="tab-panel" dir="rtl">
-                                @*@Html.Action("ListCompare", "Compare")*@
+                                @Html.Action("ListCompare", "Compare")
                             </div>
                         </div>
                     </div>
