--- a/Views/Shared/_Product.cshtml
+++ b/Views/Shared/_Product.cshtml
@@ -25,7 +25,7 @@
             </div>
             <div class="product-button">
                 <a class="btn-add-wishlist" title="افزودن به لیست دلخواه" href="#">افزودن لیست دلخواه </a>
-                <a class="btn-add-comparre" title="افزودن برای مقایسه" href="#">افزودن مقایسه مقایسه </a>
+                <a class="btn-add-comparre" title="افزودن برای مقایسه" onclick="AddTooCompare(@Model.ProductID)">افزودن مقایسه مقایسه </a>
                 <a class="button-radius btn-add-cart" title="افزودن به سبد خرید" onclick="AddToCart(@Model.ProductID)">خرید<span class="icon"></span></a>
             </div>
         </div>
